2000-11-17  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/scheduler.conf.in, proto/db/routes:
	    Define channel   smtp-log  which (obviously) logs
	    the SMTP protocol into log-file.  See "-l" option
	    at  smtp(8) man-page.

2000-11-16  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* configure.in:
	    Some reworking around NDBM tests -- we *MAY* have
	    problems when <ndbm.h> is actually from BSD DB 1.85.
	    Specifically in OpenBSD 2.7, several other BSDs as well.

	* transports/smtp/getmxrr.c, scheduler/mailq.c,
	  libc/myhostname.c:
	    BSD  getaddrinfo()  call returns ai_canonname member as NULL
	    in very common cases!  Uargh :-(

	* lib/Makefile.in:
	    At  'make selfaddrs-test', do use autoconfigured @LIBRESOLV@
	    library reference.

2000-11-14  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* lib/selfaddrs.c, lib/zgetifaddress.c:
	    Fix the support for FreeBSD 4.2*/OpenBSD 2.7* featured
	    getifaddrs() function.

	* Makefile.in:
	    Mark version "2.99.55-pre1cvs" (which means nothing much)

	* include/ta.h, transports/libta/fwriteheaders.c,
	  transports/libta/swriteheaders.c, transports/libta/markoff.c,
	  transports/libta/mime2headers.c, transports/libta/mimeheaders.c,
	  transports/libta/stringlib.c, transports/smtp/appendlet.c,
	  transports/smtp/smtp.c, transports/smtp/smtp.h:
	    Initial steps towards doing proper format downgrade
	    during (SMTP) transport.
	    - Modified header handling to process folded lines as single
	      string, not as a sequence of strings.
	    - Wrote proper RFC822/MIME token scanner into  mimeheaders.c
	      which is able to correctly skip over places where (folded)LWSP
	      is allowed, including possible (comments) in them.

2000-11-12  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* Marked this as  zmailer-2-99-54-patch1

	* lib/selfaddrs.c:
	    Learned something about the SIOCGIFFLAGS/SIOCGLIFFLAGS
	    ioctl parameters, and what is necessary for initializing